*Empty MediaWiki Message*

--- a/وحدة_الوجود.mw
+++ b/وحدة_الوجود.mw
@@ -33,6 +33,38 @@
 ===بشپړه فنا في الله او بقا في الله===
 ===حلول او اتحاد===
 
+== په نورو ولسونو کې د وحدت الوجود ګروهه==
+د وحدت الوجود ګروهه  ډېر اوږد پېښلیک (تاریخ) لري، چې ان تر زېږدو کلونو اخوا ور اوړي. موږ به کوښښ وکړو چې دا پېښلیک په لنډ ډول راواخلو:
+===لومړی د وحدت الوجود ګروهه په لرغوني هند کې:===
+څرنګه چې لرغونې هند د ډېرو ډلو، ټپلو لکه: مادیت، ثنویت، لمر و ستورو لمانځونکو، بُت لمانځنې او تناسخ ارواح (د ارواو بېرته راګېدنې) په څېر ګروهو منځنۍ (مرکز) و،  او په هند کې د دارنګه ګروهو (عقیدو) او اندواند (افکارو) هېڅ کوم برید نه و، په وحدت الوجود کې د باریکو ټکو لټه پیل شوه. پدې توګه د اسلام له را ښکاره کېدا څخه وروسته هم ډېرې ګروهې له هندي ګروهو څخه اغیزمن شول، لکه، غیبي هویت، چې د ادراک څخه ور اخوا دی، او بلا تعین وجود، په وحدت کې ډېرښت (کثرت)، منبسطه فیض، جان کل او دارنګه نور ډېرې ګروهې د هندي اندواندو (افکارو) سره نږدې پاتې شوې، او ددې ولس له عرفاني (تصوفي) ویناوو سره ډېر ورته والې (مشابهت) لري، چې موږ به یې دلته یو څو یاد کړو:
+
+====اوپنېشاد:====
+د هندي څلورو سترو مهمو کتابونو څخه یو دی، چې هندي ریشیانو (ملایانو) لخوا د لیکنو او اشعارو په ډول دی راټولې کړي دی. په دې کتاب کې لیکلي دی چې:
+(ټول شیان، یانې بشري، حیواني او نباتي صورتونو څخه نیولې تر اجرام علوي (اسماني مخلوقاتو) او مجردو ارواو پورې، ټول د وحدت په دریاب کې ډوب دي، او د [وحدت په عالم] له محسوساتو څخه پورته، ناټاکلې (غیر محدود) او قایم بالذات [په ځان ولاړ] دی، او هغه حق [برهما] دی او بس، هغه له هېڅ څیز څخه زېږېدلې ندې، او هغه حد په عقل کې نه ځایږي، او همهغه دی، چې نړۍ یې په نه پای ته رسېدونکې (غیر متناهي) تشه (فضا) کې وپنځوله. حال دا چې دا (نړۍ) د خیالاتو یو ډېرې و، چې بالاخره به په همهغه کې ور ورک شي. مګر ثابت وجود یواځې [برهما] دی، او نور سراب یا دوکه ورکوونکي نظرونه دي، او یا هم د هغه د بشپړښت (کمال) ښکارندویه دي.)
+دا فلسفه د ثنویت سره بډوالی لري، د رېګوېدا په یوه لرغوني پاڼه کې داسې لیکل شوي:
+[نه خو وجود و، او نه هم عدم،  نه تشه (فضا) وه او نه هم اسمان، هغه کوم څیز و چې په خوځښت راغې، په کومه لور او د چا تر پام لاندې؟ ایا سمندر او غرونو او غرونو شتون درلو؟ نه خو مرګ و، نه هم ژوند. ورځ و شپه یو له بله جدا نه ول.بس سره یو ول، او لدې پرته هېڅ هم نه ول او هېڅ څیز ددې پته او نښه ویلو والا هم نه و. په لومړي ځل دې کې دا غوښتنه پیدا شوه او د ښکاره کېدو خیال یې پیدا شو.]
+
+===د هندي ولس د نورو لیکنو څخه د یو بلې لیکنې ټوټې ته پام وکړﺉ:===
+[هغه موجود چې پر زمکه قیام هم لري، او له هغې جدا هم. او هغه موجود چې اور هم دی، اوبه، هوا، خاوره، ډبره، سپوږمۍ، لمر، ستورو او د تندر په برېښنا او د ټولو موجوداتو کې هم قایم دی، او له هغو جدا هم. همهغه وجود تل تر تله (ابدي) او په ټولو اجسامو کې نفوذ هم لري. هغه د توري په څېر دی، چې په تېکي کې وي. دا موجود له ازله دارنګه دی، چې ټول موجودات په همغه کې پټ دي او له همغه څخه پیدا شوي هم دي، او پدې ډول اور .... فروزان... کې په زرګونه شکلونه ښايي او ورکېږي هم. اشخاص هم په همدې ډول له تل ترتله وجود څخه پیدا کېږي او بیا همدې خوا ته ور درومي.
+===نروانا===
+د هندي تصوف کومې ګروهې چې ډېر مشهوره شوې هغه د نروانا ګروهه ده. دا ګروهه د ژوند له غمونو او خواشینیو څخه د خلاصون عمليې ته وایی، هغه که دا خلاصون په اختیاري ډول وي، نفس په ولکه کې راوستلو سره (اختیاري مرګ څخه) یا طبیعي مرګ څخه. او نروانا څخه موخه هغه ډاډ دی، چې له ژوند سره د اړیکو پرېکونې څخه ترلاسه کېږي، چې دا ترلاسه کونه له مرګ څخه مخکې هم شونې ده. دارنګه دا ګروهه د فنا فی الله (په څښتن کې د پنا کېدا) ګروهې سره ورته والې لري، مګر توپیر دا دی، چې په فنا فی الله کې بقا باالله هم شامل وي. لیکن د نروانا معراج له دې څخه ډېرو تشرېحاتو کې یواځې ورکېدل دي. او ډېری خلکو ددې خبرې تعبیر داسې کړې، چې د نفس پیوستیا له کلي نفس سره. د هندي صوفیانو په وینا جزیي نفس یو ځړوبې دی، چې د بې کرانه چاپېریال څخه جدا ده، او بیا هم د هغه پر لور را درومي،  او په همهغه کې ورکېږي، او برهما (حق) او آتا (نفس او ناطقه) کې یووالې (وحدت) برقراره دی. 
+د حلول ګروهه هم په هندي تصوف کې رواج ده. داسې ویل کېږي، چې یوه ورځ یو هندي فیلسوف خپل نوي زده کوونکي ته وویل چې: څښتن په هر څه کې شته، ان تردې چې په تا کې هم. دا زده کوونکې د خپل ښوونکي له دې وینا څخه دومره په جذبه کې راغې، چې داسې و انګېرل شوه، چې دده د اروا سره جسم په نامه د کوم څیز تړاو هومره هم نشته. پدې حال کې دې له خپل ښوونکي څخه بهر را ووت، تردې چې د یوه غټ پیل سره مخامخ شو. پیلوان پرې راغږ کړ، چې هلکه ړوند خو نه یې، یو اړخ ته شه.  زده کوونکي په خپل زړه کې تېره کړه، چې زه خو څښتن یم، نو بیا له پیل څخه ولې وډار شم. ناڅاپه پیل دا هلک په خپل خرتوم کې را ونیوه او په زمکه یې را وویشت. پیلوان په خواریو زاریو له پیل څخه خلاص کړ. زده کوونکې په مات ګوډ ځان د ښوونکي پر لور روان شو او هلته یې هغه ته وویل، چې ستا وینا ناسمه وه، چې په هرڅیز کې څښتن وي.  هسې بې هیڅه به دې اوس مړ کړې وم. ښوونکي ورته وویل، ما سمه خبره کړې وه، ته څښتن یې، خبره دومره ده، چې پیل هم څښتن دی او پیلوان هم. او د هغه غږ هم څښتن غږ و، چې ته په له ناسمه لارې تګ څخه منه کولې.
+
+==د یوناني فیلسوفانو د وحدت الوجود آند==
+د یونان هېواد لومړي فیلسوف، چې د وحدت الوجود او تلوالي (ابدیت) ناره یې پورته کړه، او د نړۍ د یووالي (وحدت) یې د هغې تابع وګڼو، زینوفان ...... دی. چې ددې ښوونځي له سرخیلانو څخه هم ګڼل کېږي. او چا چې له ده څخه مخکې په دې اړه څه ویلي ول، د هغوي وینا دومره روښانه نه وی. او نه یې هم دومره ګرانښت ترلاسه کړ. اپلاتون او ارستو لیکلي چې وحدت الوجود بنسټګر زینوفان دی. ارستو وایي، چې هغه (زینوفان) د وحدت مبدا ... وجود د له د وجود له کلي وحدت سره یو ګڼي. او ښکاره ده، چې د موجوداتو سرچینه یو وجود دی، نو د دوییز (ثنویت) پوښتنه هم نشي راپیدا کېدای. لیکن دې فیلسوف د نړۍ حقیقت هم منلې، او د ځينو نورو په څېر یې هغه د وهم و ګومان سره تعبیر کړې. زېنوفان لومړی شخص و، چې د شرک او ډېرو څښتنانو د جهاد توغ پورته کړ، او یوه څښتن یې د نورو موجوداتو له صفاتو څخه پاک وګاڼه. دې وایي، چې انسان چې کوم څیز د ځان لپاره د کمال باعث ګڼي، هماغه شې د څښتن لپاره د ثابتولو کوښښ کوي. دې دا سوچ نه کوي که چېرې په ژوو کې شعور واي او هغوي هم همدارنګه د ځان په څېر ګڼلای، نو د څښتن څېره به داسې وه، چې پنجې او وېښتان او لکۍ به یې و. څښتن تعالی له جسماني نیمګړیتاوو او اخلاقي خامیو څخه پاک دی. 
+
+===پارمینډس او وحدت الوجود===
+پارمینډس د خپل ښوونکي په څېر د هستۍ په وحدت ګروهه درلوده. د وجود نه پیل شته او نه پای، هغه ازلي او ابدي او لا محدوده دی. او هېڅ د عقل څښتن د یو وجود پرته، چې ټول وجود دی، بل کوم حقیقت نشي منلای.
+
+ده د وجود ازلیت او ابدیت باندې داسې استدلال وکړ، چې که چېرې وجود حادث وګڼل شي، نو دا پوښتنه راولاړېږي، چې وجود له وجود څخه پیدا شو که له عدم (هېڅ) څخه؟ که چېرې له وجود څخه راغې، بیا له خپل ځان څخه را پیدا شو، مانا دا، چې له مخکې څخه وجود و، او په دې توګه ازلیت ثابتېږي. او که چېرې وویل شي، چې له عدم (هېڅ) څخه منځته راغلې، نو دا مفروضه د عقل قرین نده. 
+
+===رواقي فلسفه===
+راوقيان هم د وحدت الوجود قایله دي، لیکن ددوی وحدت، مادي وحدت دی، او څښتن د نړۍ ترتیبوونکې ګڼي، نه د پنځوونکي (پیدا کوونکي) په توګه. رواقیان دوه څیزه مني. یوه ماده و بل توان و قوت. لیکن له قوت څخه د دوی موخه نه خو قدرت و توان دی، او نه هم هغه توان چې د خوځښت سبب ګرځي. 
+ددوي په خیال: انسان کې قوت (نفس) دی، او په نړۍ کې څښتن. او ماده په انسان کې جسم دی، او په نړۍ کې عنصري مواد.
+د رواقیانو په وړاندې داواړه (ماده و قوت) له یو بل سره تړلي دي. قوت فاعل دی او ماده منفعل ده. (دوي دا دواړه د یوه وجود دوه اړخه کڼي).
+
+وحدت الوجود، لیکوال: فضل الله ضیاء نور. ۲۰۰۷ز کال، مقتدره قومي زبان- اسلام اباد-پاکستان
+
 وحدة الوجود
  
 [[category:فلسفه]]
