--- a/ګابن.mw
+++ b/ګابن.mw
@@ -57,7 +57,7 @@ The first president of Gabon, elected in 1961, was [[Léon M&#8217;ba]], with [[
 
 == Politics ==
 {{Main|Politics of Gabon}}
-[[Image:Bongo and Bush.jpg|thumb|left| President [[Omar Bongo]] Ondimba of Gabon (left) in Washington, USA]]In March 1991 a new constitution was adopted. Among its provisions are a Western-style bill of rights, the creation of the National Council of Democracy that also oversees the guarantee of those rights and a governmental advisory board which deals with economic and social issues. Multi-party legislative elections were held in 1990-91 even though opposition parties had not been declared formally legal. 
+[[Image:Omar_Bongo_with_George_Bush_May_26_2004-02.jpg|thumb|left| President [[Omar Bongo]] Ondimba of Gabon (left) in Washington, USA]]In March 1991 a new constitution was adopted. Among its provisions are a Western-style bill of rights, the creation of the National Council of Democracy that also oversees the guarantee of those rights and a governmental advisory board which deals with economic and social issues. Multi-party legislative elections were held in 1990-91 even though opposition parties had not been declared formally legal. 
 
 President [[Omar Bongo|El Hadj Omar Bongo Ondimba]], in power since [[1967]] and the longest-serving African head of state, was re-elected to another 7-year term according to poll results returned from elections held on [[November 27]] [[2005]]. According to figures provided by Gabon's Interior Ministry, this was achieved with 79.1% of the votes cast. In [[2003]] the President amended the [[Constitution of Gabon]] to remove any restictions on the number of terms a president is allowed to serve. The president retains strong powers, such as authority to dissolve the National Assembly, declare a state of siege, delay legislation, conduct referenda, and appoint and dismiss the prime minister and cabinet members.
 
