*Empty MediaWiki Message*

--- a/ابن_باجه.mw
+++ b/ابن_باجه.mw
@@ -21,8 +21,8 @@
 |  اغېزمن کړي       =  
 |  د ياد وړ کارونه =  
 }}
-
-ابن باجه پوره نوم ابوبكر محمدبن يحيى او لقب يې صائغ يا ابن باجه دى. 
+[[
+ابن باجه]] پوره نوم ابوبكر محمدبن يحيى او لقب يې صائغ يا ابن باجه دى. 
 دې د منځنيو پېړيو لوديځ پوهان د (Ayempace) په نامه پېژني. دې د اندلس له نامتو پوهانو څخه ؤ، چې په رنځپوهنه، شمېرپوهنه، ستورپوهنه، او فلسفه كې يې پوره لاس درلود. له دې څخه پرته يې ټنګ ټكور په ځانګړي توګه (عود غږونه)كې پوره مهارت درلودو له وجې فارابي سره پرتله كېده. 
 ابن باجه د يوولسمې پېړې په وروستۍ برخه كې ومړ.
 
@@ -63,10 +63,10 @@
 |}
 
 
-[[category:فلسفه]]
-[[Category:مسلمان فیلسوفان|باجه, ابن]]
-[[Category:مسلمان شاعران|باجه, ابن]]
-[[category: مسلمان فیلسوفان]]
+[[وېشنيزه:فلسفه]]
+[[وېشنيزه:مسلمان فیلسوفان|باجه, ابن]]
+[[وېشنيزه:مسلمان شاعران|باجه, ابن]]
+[[وېشنيزه: مسلمان فیلسوفان]]
 
 [[an:Avempace]]
 [[ar:ابن باجة]]
