--- a/ابن_رشد.mw
+++ b/ابن_رشد.mw
@@ -43,7 +43,7 @@
 * [[مقالة في القياس الشرطي]].
 |
 
-==نور مشهور كتابونه يې:==
+==نور نامتو كتابونه ==
 * [[كتاب مناهج الأدلة]] ، چې د فقهې او د كلام علم څخه بحث كوي.
 * [http://ar.wikisource.org/wiki/%D8%A7%D8%A8%D9%86_%D8%B1%D8%B4%D8%AF_-_%D9%81%D8%B5%D9%84_%D8%A7%D9%84%D9%85%D9%82%D8%A7%D9%84 كتاب فصل المقال فيما بين الحكمة و الشريعة من الاتصال] ، وهو من المصنفات الفقهية والكلامية.
 * د [[تهافت التهافت]] كتب، چې د ابن رشد لخوا د [غزالي]] د [[تهافت الفلاسفة]] كتاب په رد كې ليكل شوې.
