--- a/گرو_نانک.mw
+++ b/گرو_نانک.mw
@@ -93,7 +93,7 @@ Spending the last fifteen years of his life in [[Kartarpur]], the Guru would wak
 On [[22 September]] [[1539]], aged 70, Guru Nanak met with his demise, after he had requested his disciples to sing the [[Sohila]] (the praise of God).
 
 == فولکلوري کيسه ==
-د سکهانو له قوله داسې روايت دی چې کله ګرو بابا نانک مړ شو، نو د ګرو بابا نانک هندو پلويانو غوښتل چې د نوموړي ګرو مړی وسوځوي او په بل پلو د هغه مسلمانو پلويانو غوښتل چې د ګرونانک مړی په اسلامي دود سره خښ کړي. خو کله چې دغو دواړو مذهبي ډلو د ګرو بابا نانک د مړي نه څادر ليرې کړ نو د هغه د جسد پرځای يې تازه ګلان وموندل کوم چې د هندو او مسلمانو پلويانو ترمېنځ ګډ ووېشل شول. نو په دې وخت کې هندوانو د خپلې برخې ګلان د خپل مذهبي دود له مخې وسوځول او کوم ګلان چې د مسلمانانو په برخه  رسېدلي وه هغه يې د اسلامي دودونو سره سم په زمکه کې خښ کړل. {{Fact|date=May 2007}}
+د سکهانو له قوله داسې روايت دی چې کله ګرو بابا نانک مړ شو، نو د ګرو بابا نانک هندو پلويانو غوښتل چې د نوموړي ګرو مړی وسوځوي او په بل پلو د هغه مسلمانو پلويانو غوښتل چې د ګرونانک مړی په اسلامي دود سره خښ کړي. خو کله چې دغو دواړو مذهبي ډلو د ګرو بابا نانک د مړي نه څادر ليرې کړ نو د هغه د جسد پرځای يې تازه ګلان وموندل کوم چې د هندو او مسلمانو پلويانو ترمېنځ ګډ ووېشل شول. نو په دې وخت کې هندوانو د خپلې برخې ګلان د خپل مذهبي دود له مخې وسوځول او کوم ګلان چې د مسلمانانو په برخه  رسېدلي وه هغه يې د اسلامي دودونو سره سم په زمکه کې خښ کړل. {{رښتيا|date=May 2007}}
 
 == د بابا نانك فلسفي ګروهې ==
 
