/* د ژوند  لومړې پير */

--- a/گرو_نانک.mw
+++ b/گرو_نانک.mw
@@ -44,7 +44,7 @@ The stories of Guru Nanak's life are collected in writings known as the ''''[[Ja
 
 [[Bhai Gurdas]], the scribe of the [[Gurū Granth Sāhib]], also wrote about Nanak's life in his ''vārs''.  However, these too were compiled after Guru Nanak's demise, and are less detailed than the Janamsākhīs.  Sikhs tend to hold Gurdas's accounts in higher esteem because of the author's generally perceived trustworthiness. 
 
-==د ژوند  لومړې پير==
+==د ژوند  لومړی پير==
 [[Image:Guru.Nanak.with.Hindu.holymen.jpg|250px|thumb|left|Nanak with Hindu holy men.]]
 
 Guru Nanak was born on [[20 October]] [[1469]] in a [[Hindu]] family of the [[Bedi]] [[Khatri]] clan,<ref>{{cite book | last=Macauliffe | first=Max Arthur | authorlink=Max Arthur Macauliffe | year=2004 | origyear=1909 | title=The Sikh Religion - Its Gurus, Sacred Writings and Authors | publisher=Low Price Publications | location=India | id = ISBN 81-86142-31-2 | pages=1 | quote=The third day of the light-half of the month of Baisakh (April-May) in the year AD 1469, but, some historians believe that the Guru was born on April 15th, 1469 A.D.}}. Generally thought to be the third day of Baisakh (or Vaisakh) of Vikram Samvat 1526.</ref> in the village of ''Rāi Bhōi dī Talvaṇḍī'', now called [[Nankana Sahib]] (after the Guru), near [[Lahore]], [[Pakistan]].<ref>{{cite book | last=Singh | first=Khushwant | authorlink=Khushwant Singh | year=2006 | title=The Illustrated History of the Sikhs | publisher=Oxford University Press | location=India | id = ISBN 0-19-567747-1 | pages=12-13}} Also, as according to the Purātan Janamsākhī (the birth stories of Nanak).</ref> Today, his birth place is marked by Gurdwara Janam Asthan. His father, Mehta Kalyan Das Bedi, also known as [[Mehta Kalu]], was the patwari (accountant) of crop revenue for the village of Talwandi under the [[Muslim]] landlord of the village, Rai Bullar who was responsible for collecting taxes. Guru Nanak's mother was 
