/* د ګروبابا نانك دېو د ژوند کيسې */

--- a/گرو_نانک.mw
+++ b/گرو_نانک.mw
@@ -39,10 +39,10 @@
 
 Beside followers of [[Sikhism]], '''Guru Nanak Dev''' is revered by Hindus across the [[Indian subcontinent]].<ref>{{cite book | last=Duggal | first=Kartar Singh | year=1988 | title=Philosophy and Faith of Sikhism | publisher=Himalayan Institute Press | id = ISBN 0-89389-109-6 | pages=xxii}}</ref> His primary message to society was recorded to be "devotion of thought and excellence of conduct as the first of duties".<ref>{{cite book | last=Cunningham | first=Joseph Davey | authorlink=Joseph Cunningham | year=2006 | origyear=1853 | title=History of the Sikhs | publisher=John Murray  | location=Albemarle Street. London | id = ISBN | pages= 43}}</ref>
 
-==د ګروبابا نانك دېو د ژوند کيسې==
+==د ګرو بابانانك د ژوند کيسې==
 The stories of Guru Nanak's life are collected in writings known as the ''''[[Janamsākhīs]]''''.  The most popular Janamsākhī purports to have been written by [[Bhai Bala]] a close companion, before Nanak died<ref>[http://www.allaboutsikhs.com/index.php?option=com_content&task=view&id=17]</ref>. However, the writing style and language employed have left scholars such as [[Max Arthur Macauliffe]] certain that they were composed after his death.<ref>{{cite book | last=Macauliffe | first=Max Arthur | authorlink=Max Arthur Macauliffe | year=2004 | origyear=1909 | title=The Sikh Religion - Its Gurus, Sacred Writings and Authors | publisher=Low Price Publications | location=India | id = ISBN 81-86142-31-2 | pages=lxxix}}</ref> 
 
-[[Bhai Gurdas]], the scribe of the [[Gurū Granth Sāhib]], also wrote about Nanak's life in his ''vārs''.  However, these too were compiled after Guru Nanak's demise, and are less detailed than the Janamsākhīs.  Sikhs tend to hold Gurdas's accounts in higher esteem because of the author's generally perceived trustworthiness. 
+[[Bhai Gurdas]], the scribe of the [[Gurū Granth Sāhib]], also wrote about Nanak's life in his ''vārs''.  However, these too were compiled after Guru Nanak's demise, and are less detailed than the Janamsākhīs.  Sikhs tend to hold Gurdas's accounts in higher esteem because of the author's generally perceived trustworthiness.
 
 ==د ژوند  لومړی پير==
 [[Image:Guru.Nanak.with.Hindu.holymen.jpg|250px|thumb|left|Nanak with Hindu holy men.]]
