robot  Modifying: [[tr:Siyâset]]

--- a/واگ.mw
+++ b/واگ.mw
@@ -120,7 +120,7 @@
 [[th:การเมือง]]
 [[tl:Politika]]
 [[tpi:Politikis]]
-[[tr:Siyaset]]
+[[tr:Siyâset]]
 [[uk:Політика]]
 [[ur:سیاست]]
 [[vec:Pułitega]]
