*Empty MediaWiki Message*

--- a/پښتورکي.mw
+++ b/پښتورکي.mw
@@ -1,4 +1,4 @@
-'''پښتورګی''' د انسانانو په بدن کې مغلقه غړي دي چې ګڼ شمېر ژونپوهنيزې کړنې ترسره کوي. د دغو غړو اهمه دنده، بدن د اوبلنو توکو په [[هوميوستاسېز|هوميوستاتيک]] توازن کې ساتنه، ده. چې دا د بدن د اوبلنو توکو او ميټابولايټونو د چڼولو او د بدن نه د متيازو له لارې د بېکاره توکو لکه، [[يوريا]]، او په [[وينه]] کې معدني توکي او [[آيون]]ونه لکه [[سوډيم]]، [[پوټاشيم]]، [[هايډروجن]]، [[آکسيجن]] او تړنګتوکي لکه [[امينو اسيد|امينو اسيدونه]]، [[کرياټينين]]، [[بايکاربونېټ]] او د [[ګلوکوز]]و د وېستلو کړنه ده. پښتورګي [[د وينې فشار]] په تنظيمولو کې، د ګلوکوزو په [[ميټابوليزم]] کې او په [[اېروتروپويېسېز]] يا د وينې د سروتوکو د جوړېدنې پروسې کې هم ډېر اهم رول لوبوي. 
+'''پښتورګی''' د انسانانو په بدن کې يو مغلقه غړی دی چې ګڼ شمېر ژونپوهنيزې کړنې ترسره کوي. د دغو غړو اهمه دنده، بدن د اوبلنو توکو په [[هوميوستاسېز|هوميوستاتيک]] توازن کې ساتنه، ده. چې دا د بدن د اوبلنو توکو او ميټابولايټونو د چڼولو او د بدن نه د متيازو له لارې د بېکاره توکو لکه، [[يوريا]]، او په [[وينه]] کې معدني توکي او [[آيون]]ونه لکه [[سوډيم]]، [[پوټاشيم]]، [[هايډروجن]]، [[آکسيجن]] او تړنګتوکي لکه [[امينو اسيد|امينو اسيدونه]]، [[کرياټينين]]، [[بايکاربونېټ]] او د [[ګلوکوز]]و د وېستلو کړنه ده. پښتورګي [[د وينې فشار]] په تنظيمولو کې، د ګلوکوزو په [[ميټابوليزم]] کې او په [[اېروتروپويېسېز]] يا د وينې د سروتوکو د جوړېدنې پروسې کې هم ډېر اهم رول لوبوي. 
 د طب هغه څانګه چې د پښتورګو په اړه او ددوي د ناروغيو په اړه په کې زده کړې کېږي د نېفرولوجي په نامه يادېږي.<ref>{{cite web|url=http://dictionary.reference.com/browse/Nephrology|title=Nephrology|publisher=Dictionary.com |accessdate=2007-08-04}}</ref> د ''nephro-'' يا نېفرو مختاړی د پښتورګي په مانا ده چې همدا ويي د لرغوني يوناني لغت ''nephros (νεφρός)''; يا نېفروس څخه اخيستل شوی، همدا ډول د ''renal'' يا رينال صفت د پښتورګي ته اړوند په مانا ده چې دا بيا لاتين د ژبې ''rēnēs'' يا رېنيس نه راوتلی چې دا وييکه د پښتورګي مانا لري.<ref>{{cite book
   | last = Maton
   | first = Anthea
