*Empty MediaWiki Message*

--- a/پښتورکي.mw
+++ b/پښتورکي.mw
@@ -13,3 +13,88 @@
   | doi = 
   | id = 
   | isbn = 0-13-981176-1}}</ref>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[[af:Nier]]
+[[ar:كلية]]
+[[az:Böyrəklər]] 
+[[bn:বৃক্ক]]
+[[bs:Bubreg]]
+[[bg:Бъбрек]]
+[[ca:Ronyó]]
+[[cv:Пӳре]]
+[[cs:Ledvina]]
+[[cy:Aren]]
+[[da:Nyre]]
+[[de:Niere]]
+[[dv:ގުރުދާ]]
+[[en:Kidney]]
+[[et:Neerud]]
+[[es:Riñón]]
+[[eo:Reno]]
+[[eu:Giltzurrun]]
+[[fa:کلیه]]
+[[fr:Rein]]
+[[gl:Ril]]
+[[ko:콩팥]]
+[[hr:Bubrezi]]
+[[id:Ginjal]]
+[[is:Nýra]]
+[[it:Rene]]
+[[he:כליה]]
+[[pam:Batu]]
+[[ku:Gurçik]]
+[[la:Ren]]
+[[lv:Nieres]]
+[[lt:Inkstas]]
+[[hu:Vese]]
+[[mk:Бубрег]]
+[[ml:വൃക്ക]]
+[[mt:Kilwa]]
+[[ms:Buah pinggang]]
+[[nl:Nier (biologie)]]
+[[ja:腎臓]]
+[[no:Nyre]]
+[[nn:Nyre]]
+[[om:Kalee]]
+[[pag:Batok]]
+[[pl:Nerka]]
+[[pt:Rim]]
+[[ro:Rinichi]]
+[[qu:Wasa ruru]]
+[[ru:Почка (анатомия)]]
+[[scn:Rini]]
+[[simple:Kidney]]
+[[sk:Oblička]]
+[[sl:Ledvica]]
+[[sr:Бубрег]]
+[[sh:Bubreg]]
+[[su:Ginjal]]
+[[fi:Munuainen]]
+[[sv:Njure]]
+[[ta:சிறுநீரகம்]]
+[[te:మూత్రపిండము]]
+[[th:ไต]]
+[[tr:Böbrek]]
+[[uk:Нирки]]
+[[ur:كُلیَہ]]
+[[fiu-vro:Rauh]]
+[[yi:ניר]]
+[[zh:腎]]
