*Empty MediaWiki Message*

--- a/پښتورکي.mw
+++ b/پښتورکي.mw
@@ -13,7 +13,12 @@
   | doi = 
   | id = 
   | isbn = 0-13-981176-1}}</ref>
+==اناتومي==
+په انسانانو کې پښتورګي د خيټې په شاتنۍ برخې کې پراته دي. هر يو وګړی د دوه پښتورګو خاوند دی، چې هر يو پښتورګی د شمزي په کيڼ او ښي اړخونو کې ځای پر ځای دي. کيڼ پښتورګی د پرين نه ښکته، د توري په شاتنۍ برخه کې او ښی پښتورګی د پرين نه لږ څه ښکته، د ځيګر په شاتنۍ برخې کې، پروت دی Above each kidney is an [[adrenal gland]] (also called the ''suprarenal gland''). The asymmetry within the abdominal cavity caused by the liver results in the right kidney being slightly lower than the left one while the left kidney is located slightly more medial. The bulk of water re-absorption in the vertebrate kidney takes place in the [[loop of Henle]].
 
+The kidneys are [[retroperitoneal]] and range from 9 to 13 cm in diameter; the left slightly larger than the right. They are approximately at the [[vertebra]]l level T12 to L3. The upper parts of the kidneys are partially protected by the eleventh and twelfth [[rib]]s, and each whole kidney and [[adrenal gland]] are surrounded by two layers of fat (the perirenal and pararenal fat) and the [[renal fascia]] which help to cushion it. Congenital absence of one or both kidneys, known as unilateral (on one side) or bilateral (on both the sides) [[renal agenesis]], can occur.
+
+The kidneys receive unfiltered blood directly from the heart through the [[abdominal aorta]] which then branches to the left and right [[renal artery|renal arteries]]. Filtered blood then returns by the left and right [[renal vein]]s to the [[inferior vena cava]] and then the heart. [[Renal blood flow]] accounts for 20-25% of the cardiac output.
 
 
 
