*Empty MediaWiki Message*

--- a/پښتورکي.mw
+++ b/پښتورکي.mw
@@ -34,7 +34,9 @@ The kidneys receive unfiltered blood directly from the heart through the [[abdom
 
 
 
-
+==سرچينې==
+{{commonscat}}
+{{reflist|2}}
 
 
 [[af:Nier]]
