--- a/پښتورکي.mw
+++ b/پښتورکي.mw
@@ -26,13 +26,11 @@ The kidneys receive unfiltered blood directly from the heart through the [[abdom
 
 
 
-
-
-
-
-
-
-
+==دا هم وګورۍ==
+*[[د پښتورګي ډبره]]
+*[[Kidney transplantation]]
+*[[د پښتورګي فيزيالوجي]]
+*[[د ميتيازو غونډال]]
 
 ==سرچينې==
 {{reflist|2}}
