--- a/عمر_خطاب.mw
+++ b/عمر_خطاب.mw
@@ -17,6 +17,6 @@
 وروسته بيا د ډېرو افغانانو په غوښتنه د همدې پیام افغان په نوم په ۲۰۰۷ کې يوه ټيلويزيوني شبکه پرانيستله .
 
 == باندنۍ تړنې ==
-
+[http://www.payameafghantv.com/Main_page.html د پيام افغان ټلويزون رسمي وېبپاڼه]
 [[وېشنيزه:پښتانه]]
 [[وېشنيزه:خبريالان]]
