*Empty MediaWiki Message*

--- a/لومړی_مخ.mw
+++ b/لومړی_مخ.mw
@@ -34,14 +34,12 @@
 
 ----------Strapline immediately below banner---------->
 {|style="width:100%; background:none; margin:-.8em 0 -.7em 0;"
-|style="font-size:95%; padding:10px 0; margin:0px; text-align:left; white-space:nowrap; color:#000;"| [[ويکيپېډيا:په هکله|کتنه]]&nbsp;'''·''' [[ويکيپېډيا:لارښودليکچه|سمادول]]&nbsp;'''·''' [[ويکيپېډيا:پوښتنې|پوښتنې]]&nbsp;'''·''' [[لارښود:نيوليک|لارښود]]
+|style="font-size:95%; padding:10px 0; margin:0px; text-align:left; white-space:nowrap; color:#000;"| [[ويکيپېډيا:په اړه|کتنه]]&nbsp;'''·''' [[ويکيپېډيا:لارښودليکچه|سمادول]]&nbsp;'''·''' [[ويکيپېډيا:پوښتنې|پوښتنې]]&nbsp;'''·''' [[لارښود:نيوليک|لارښود]]
 |style="font-size:95%; padding:10px 0; margin:0px; text-align: right; white-space:nowrap; color:#000;"|
 [[ويکيپېډيا:نيوليک|نيوليک]]&nbsp;'''·''' [[ويکيپېډيا:د ټولۍ ليکلړ|ټولۍ]]&nbsp;'''·''' [[ويکيپېډيا:مستنده توکي|مستنده توکي]]&nbsp;'''·''' [[ويکيپېډيا:چټک ليکلړ|A–Z ليکلړ]]
 |}
 {{د لومړي مخ سرليک}} 
 <center>[[ويکيپېډيالارښود|دويکيپيډيا سره کارکول زده کړئ!]]
-
-[[کمېټه|که غواړئ چي دپښتو ويکيپېډيا د کمېټې غړی شئ نو دلته کليک وکړئ!]]
 </center>
 *********************************************************
 <big><p align="center">تاسو کولای شی په ډېره آسانه توګه دلته نوې زياتونې وکړی</big>
@@ -57,11 +55,11 @@ __NOTOC__
 | width="50%" style="vertical-align:top; border:1px solid #ccc; background:#fff; padding:.5em;" |
 <div style="align:center; margin-left: 5px; padding:5px; text-align: center; background-color: #f9f9f9; border: 1px solid #e9e9e9;"><br />
 === ژوندليکونه ===
-[[لوبګران]] - [[هنرمندان]] - [[ليکوالان]] - [[:Category:پښتانه شاعران|پښتانه شاعران]] - [[ډرامه ليکونکي]] - [[کمپوزران]] - [[موسيقي جوړونکي]] - [[سندرغاړي]] - [[فلمي لارښودګران يا ډايرکټران]] - [[د نندارو ليکوالان]] - [[مخترعين]] - [[ساينسپوهان]] - [[شمېرپوهان]] - [[فيلسوفان]] - [[اقتصادپوهان]] - [[تاريخپوهان]] - [[پوه اندي]] - [[سياستپوهان]] - [[اصيلان]] - [[انقلابيان]] - [[لوبغاړي]] - [[طبيبان]] - [[اتلان]] - [[هوابازان]] - [[ستورمزلي]] - [[غازيان]] - [[قاريان]] -[[کاشفان]]- [[مولويان]] - [[ملايان]] - [[خبريالان]]- [[سياستوال]] - [[ولسمشران]] - [[پاچايان]] - [[ملکې]] - [[وزيران]]
+[[لوبګران]] - [[هنرمندان]] - [[ليکوالان]] - [[وېشنيزه:پښتانه شاعران|پښتانه شاعران]] - [[ډرامه ليکونکي]] - [[کمپوزران]] - [[موسيقي جوړونکي]] - [[سندرغاړي]] - [[فلمي لارښودګران يا ډايرکټران]] - [[د نندارو ليکوالان]] - [[مخترعين]] - [[ساينسپوهان]] - [[شمېرپوهان]] - [[فيلسوفان]] - [[اقتصادپوهان]] - [[تاريخپوهان]] - [[پوه اندي]] - [[سياستپوهان]] - [[اصيلان]] - [[انقلابيان]] - [[لوبغاړي]] - [[طبيبان]] - [[اتلان]] - [[هوابازان]] - [[ستورمزلي]] - [[غازيان]] - [[قاريان]] -[[کاشفان]]- [[مولويان]] - [[ملايان]] - [[خبريالان]]- [[سياستوال]] - [[ولسمشران]] - [[پاچايان]] - [[ملکې]] - [[وزيران]]
 
 === بوب ساينس ===
 
-[[ستورپوهنه]] - [[ستورپېژندنه]] - [[بوټپوهنه]] - [[کيميا]] - [[چاپېريال پوهنه]] - [[خزدکې (حشرات) پېژندنه]] - [[شمېر پوهنه ]] - [[فزيک]] - [[ځمکپېژندنه]] - [[ژونپوهنه]] - [[سرشمېرنه]]- [[طب]] - [[درملپوهنه]]- [[درملپېژندنه]] - [[ژونکيميا]]
+[[ستورپوهنه]] - [[ستورپېژندنه]] - [[بوټپوهنه]] - [[کيميا]] - [[چاپېريال پوهنه]] - [[خزدکې (حشرات) پېژندنه]] - [[شمېر پوهنه ]] - [[فزيک]] - [[ځمکپېژندنه]] - [[ژونپوهنه]] - [[سرشمېرنه]]- [[طب]] - [[درملپوهنه]]- [[درملپېژندنه]] - [[ژونکيميا]] - [[رنځپوهنه]] 
 
 === ټولنيزې پوهنې ===
 
@@ -101,7 +99,7 @@ __NOTOC__
 [[ټيلويزون]] - [[راډيو]] - [[ورځپاڼه]] - [[رساله]] - [[انټرنټ]] - [[خبريالي]] - [[ويکپيديا ليکونکی ]] - [[Wikipedia:List of portals|List of portals]]
 
 ويکيپېډيا د وېشنيزو له مخې<br />
-[[:وېشنيزه:Main|ټولګړي]] - [[Special:Categories|ټولې وېشنيزې]] - [[Wikipedia:Featured articles|مستندې ليکنې]] </div>
+[[:وېشنيزه:Main|ټولګړي]] - [[ځانګړی:وېشنيزې|ټولې وېشنيزې]] - [[ويکيپېډيا:مستندې ليکنې|مستندې ليکنې]] </div>
 
 |}
 
