--- a/پلازموډيم_فالسيپارم.mw
+++ b/پلازموډيم_فالسيپارم.mw
@@ -56,11 +56,11 @@ The protist, ''Plasmodium falciparum'', has evolved in more recent times.  Most 
 <div class="references-small"><references/></div>
 
 ==Sources and further reading==
-=== Overview ===
-*[http://www.tulane.edu/~wiser/protozoology/notes/malaria.html Introductory]
-*[http://www.ratsteachmicro.com/Malaria_notes/HCOE_CAI_Review_Notes_Malaria.htm Overview]
-*[http://www.tulane.edu/~wiser/malaria/cmb.html Malaria biology]
-*[http://www.roche.nl/ziektebeeld/malaria/malaria2.gif Life cycle cartoon]
+=== کتنه ===
+*[http://www.tulane.edu/~wiser/protozoology/notes/malaria.html پېژندنه]
+*[http://www.ratsteachmicro.com/Malaria_notes/HCOE_CAI_Review_Notes_Malaria.htm کتنه]
+*[http://www.tulane.edu/~wiser/malaria/cmb.html د ملاريا ژونپوهنه]
+*[http://www.roche.nl/ziektebeeld/malaria/malaria2.gif د ژوندڅرخ کارتون]
 
 === Blood slides ===
 *[http://home.austarnet.com.au/wormman/paraimg/pfalcipt.jpg Blood forms]
