/* Sources and further reading */

--- a/پلازموډيم_فالسيپارم.mw
+++ b/پلازموډيم_فالسيپارم.mw
@@ -55,14 +55,14 @@ The protist, ''Plasmodium falciparum'', has evolved in more recent times.  Most 
 ==سرچينې==
 <div class="references-small"><references/></div>
 
-==Sources and further reading==
+==نورې سرچينې او لوستنې==
 === کتنه ===
 *[http://www.tulane.edu/~wiser/protozoology/notes/malaria.html پېژندنه]
 *[http://www.ratsteachmicro.com/Malaria_notes/HCOE_CAI_Review_Notes_Malaria.htm کتنه]
 *[http://www.tulane.edu/~wiser/malaria/cmb.html د ملاريا ژونپوهنه]
 *[http://www.roche.nl/ziektebeeld/malaria/malaria2.gif د ژوندڅرخ کارتون]
 
-=== Blood slides ===
+=== د وينې سلايډونه ===
 *[http://home.austarnet.com.au/wormman/paraimg/pfalcipt.jpg Blood forms]
 *[http://home.austarnet.com.au/wormman/paraimg/pfalcipm.jpg Blood forms]
 *[http://www.yamagiku.co.jp/pathology/photo/photo206-7.htm Blood forms]
@@ -73,29 +73,29 @@ The protist, ''Plasmodium falciparum'', has evolved in more recent times.  Most 
 *[http://www.hh.schule.de/ghb/new_page/projekte/infektionskrankheiten/group5/malariapic.jpg Male gametocyte exflagelating]
 *[http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&list_uids=10775264&dopt=Abstract ncbi.nlm.nih.gov]
 
-=== Case histories ===
+=== د ناروغيو پېښليک ===
 *[http://www.med-chem.com/Para/Prob%20of%20Month/Prob%20of%20Month%2038%20February%2004.htm Case 1]
 *[http://www.med-chem.com/Para/Prob%20of%20Month/Prob%20of%20Month%2031%20July%2003.htm Case 2]
 *[http://www.yamagiku.co.jp/pathology/case/case206.htm Case 3]
 *[http://www.yamagiku.co.jp/pathology/case/case129.htm Case 4]
 
-=== Pathology due to <i>Plasmodium falciparum</i> ===
-;Brain
+=== د <i>پلازموډيم فالسيپارم</i> له کبله نورې ناروغۍ===
+;ماغزه
 *[http://www.vh.org/adult/provider/pathology/CNSInfDisR2/Text/165.html Gross pathology]
 *[http://www.neuroanatomy.hpg.ig.com.br/Histopathology%20of%20malaria%20of%20brain.%20Mature%20schizontsss_2.jpg Low power H & E stain]
 *[http://www.neuroanatomy.hpg.ig.com.br/Histopathology%20of%20malaria%20of%20brain.%20Mature%20schizonts._2.jpg High power H & E stain showing parasite adherence to the vessel walls]
 
-;Spleen
+;توری
 *[http://www.yamagiku.co.jp/pathology/photo/photo206-2.htm Gross pathology]
 *[http://oac.med.jhmi.edu/Pathology/Idmicro/Parasite/037A_Full.html Low power H & E]
 *[http://www.yamagiku.co.jp/pathology/photo/photo206-3.htm Smear preparation]
 *[http://www.yamagiku.co.jp/pathology/photo/photo206-4.htm Smear preparation]
 
-;Liver
+;ځيګر
 *[http://www.yamagiku.co.jp/pathology/photo/photo206-5.htm Low power H & E]
 *[http://medschool.sums.ac.ir/users/parasito/Blood%20and%20tissue%20protozoa/Malaria-schizont%20in%20liver500X.JPG High power H & E]
 
-;Kidney
+;پښتورګي
 *[http://www.med.niigata-u.ac.jp/npa/Lectures/Images/Slides/MN/07MN_medulla_L.gif Low power H & E]
 *[http://www.med.niigata-u.ac.jp/npa/Lectures/Images/Slides/MN/01MN_Ex_L.gif High power H & E]
 *[http://www.med.niigata-u.ac.jp/npa/Lectures/Images/Slides/MN/05MN_Ex_HE3_L.gif High power H & E]
@@ -109,9 +109,9 @@ The protist, ''Plasmodium falciparum'', has evolved in more recent times.  Most 
 *[http://plasmodb.org/links.shtml Other genome projects and additional information]
 *[http://www.wehi.edu.au/MalDB-www/who.html Genome]
 
-[[Category:پرازيتي ناروغۍ]]
-[[Category:ملاريا]]
-[[category:پرازيتونه]]
+[[وېشنيزه:پرازيتي ناروغۍ]]
+[[وېشنيزه:ملاريا]]
+[[وېشنيزه:پرازيتونه]]
 
 [[ca:Plasmodi falcípar]]
 [[da:Plasmodium falciparum]]
