--- a/پلازموډيم_فالسيپارم.mw
+++ b/پلازموډيم_فالسيپارم.mw
@@ -73,7 +73,7 @@ The protist, ''Plasmodium falciparum'', has evolved in more recent times.  Most 
 *[http://www.hh.schule.de/ghb/new_page/projekte/infektionskrankheiten/group5/malariapic.jpg Male gametocyte exflagelating]
 *[http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&list_uids=10775264&dopt=Abstract ncbi.nlm.nih.gov]
 
-=== د ناروغيو پېښليک ===
+=== د ناروغۍ پېښليک ===
 *[http://www.med-chem.com/Para/Prob%20of%20Month/Prob%20of%20Month%2038%20February%2004.htm Case 1]
 *[http://www.med-chem.com/Para/Prob%20of%20Month/Prob%20of%20Month%2031%20July%2003.htm Case 2]
 *[http://www.yamagiku.co.jp/pathology/case/case206.htm Case 3]
