--- a/پلازموډيم_فالسيپارم.mw
+++ b/پلازموډيم_فالسيپارم.mw
@@ -74,10 +74,10 @@ The protist, ''Plasmodium falciparum'', has evolved in more recent times.  Most 
 *[http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&list_uids=10775264&dopt=Abstract ncbi.nlm.nih.gov]
 
 === د ناروغۍ پېښليک ===
-*[http://www.med-chem.com/Para/Prob%20of%20Month/Prob%20of%20Month%2038%20February%2004.htm Case 1]
-*[http://www.med-chem.com/Para/Prob%20of%20Month/Prob%20of%20Month%2031%20July%2003.htm Case 2]
-*[http://www.yamagiku.co.jp/pathology/case/case206.htm Case 3]
-*[http://www.yamagiku.co.jp/pathology/case/case129.htm Case 4]
+*[http://www.med-chem.com/Para/Prob%20of%20Month/Prob%20of%20Month%2038%20February%2004.htm ۱ پېښه]
+*[http://www.med-chem.com/Para/Prob%20of%20Month/Prob%20of%20Month%2031%20July%2003.htm ۲ پېښه]
+*[http://www.yamagiku.co.jp/pathology/case/case206.htm ۳ پېښه]
+*[http://www.yamagiku.co.jp/pathology/case/case129.htm ۴ پېښه]
 
 === د <i>پلازموډيم فالسيپارم</i> له کبله نورې ناروغۍ===
 ;ماغزه
