/* دا هم وګورۍ */

--- a/روغتيا.mw
+++ b/روغتيا.mw
@@ -54,24 +54,24 @@ Encompassing your emotional, social, and—most importantly—your mental well-b
 * [[Portal:Health|Health (portal)]]
 
 * [[General Fitness Training]]
-** [[Physical fitness]]
-** [[List of basic exercise topics]]
+** [[فيزيکي سوبتيا]]
+** [[د بنسټيزو تمرينونو د سرليکونو لړليک]]
 
 * [[روغتيا ساتنه]]
 ** [[Health care delivery]]
 ** [[د روغتيا زده کړه]]
-** [[Health profession]]
+** [[د روغتيا مسلک]]
 
-* [[Environmental health]]
+* [[د چاپېريال روغتيا]]
 {{col-3}}
 * [[Hygiene]]
 ** [[Mental hygiene]]
 ** [[Oral hygiene]]
 ** [[Sleep hygiene]]
 
-* [[Medicine]]
+* [[طبابت]]
 ** [[Alternative medicine]]
-** [[Traditional Chinese medicine]]
+** [[چينايي دوديزه طبابت]]
 
 * [[عقلي روغتيا]]
 
@@ -81,7 +81,7 @@ Encompassing your emotional, social, and—most importantly—your mental well-b
 * [[Nutrition]]
 ** [[ويټامين]]ونه
 ** [[Dietary mineral|Mineral]]s
-** [[Healthy diet]]
+** [[روغ خواړه]]
 ** [[List of basic nutrition topics]]
 
 * [[عامه روغتيا]]
