*Empty MediaWiki Message*

--- a/روغتيا.mw
+++ b/روغتيا.mw
@@ -1,4 +1,4 @@
-'''روغتيا''' په هر وخت او زمان کې، په دواړو، سلولي، حجروي او نړېواله کچه، د يوه اورګانيزم يا يو ژواندي مېټابوليکي او ژواکني (حياتي) ښه والي ته وايي. ټول اورګانيزمونه له ساده اورګانيزم نه تر ټولو پېچلو اورګانيزمونو پورې د روغتيايي مېچنې له مخې په بېلابېلو کچو وېشل شوي، چې دا ټول بيا په دغو دوو حدودو کې چې تر ټولو نه غوره روغتيا او صفر روغتيا يا مړينه ده، راځي.
+'''روغتيا''' په هر وخت او زمان کې، په دواړو، سلولي او نړېوالې کچې، د يوه اورګانيزم يا يو ژواندي مېټابوليکي او ژوندي (حياتي) ښه والي ته وايي. ټول اورګانيزمونه له ساده اورګانيزم نه تر ټولو پېچلو اورګانيزمونو پورې د روغتيايي مېچنې له مخې په بېلابېلو کچو وېشل شوي، چې دا ټول بيا په دغو دوو حدودو کې چې تر ټولو نه غوره روغتيا او صفر روغتيا يا مړينه ده، راځي.
 د طب په ډګر کې روغتيا د يوه ژواندي (اورګانيزم) هغه وړتيا بلل کېږي کوم چې په ښه توګه د خپل چاپېريال ننګونو ته د ځواب ويلو جوګه جوړوي او په ښه توګه يو توازني حالت [[هوميوسټاسېز]] پرحال او برقراره وساتي.
 
 د روغتيا بل پراخ پېژند چې [[د روغتيا نړېوال تنظيم]] لخوا هم منل شوی پدې توګه څرګندېږي، . "روغتيا يواځې د ناروغيو او ناسمواله د نه شتون يو حالت نه دی بلکه روغتيا د بشپړ فيزيکي، عقلي، او ټولنيز ښه والي حالت ته هم وايي" <ref name="WHO_1946">WHO. [http://w3.whosea.org/aboutsearo/pdf/const.pdf د روغتيا د نړېوال تنظيم کړنلاره] , جنيوا, ۱۹۴۶. لاسرسی د اکتوبر ۳۰مه، ۲۰۰۶.</ref>. په دې وروستيو کلونو کې، همدا پېژند په بل ډول بدل شوی او په دې تعريف کې دا هم ورزيات شوي چې داسې يوه وړتيا چې چا ته يو "ګټور ټولنيز او وټنيز ژوند" په برخه کوي. د روغتيا د نړېوال تنظيم دغه پېژند بې ګوتنيونې نه دی او په دې لړ کې ځينې دا دليل وايي چې روغتيا د يوه حالت په ډول هېڅ کله نه شي تعريفېدلای، خو بايده چې روغتيا ته د ژوندون د بدلېدونکو غوښتنو او د ژوندون هغه بدلېدونکي ماناګانو يوه پرله پسې روانه عيارېدونکې پروسې په سترګه وکتل شي کوم چې مونږ خپل ژوند ته ورکوو. نو په همدې خاطر د WHO يا د روغتيا نړېوال تنظيم پېژند (تعريف) د يوه خيالي وړانديز په پرتله اکثراً يوه خيالي موخه ګڼل کېږي.
