--- a/آن.mw
+++ b/آن.mw
@@ -8,6 +8,6 @@
 
 ==اخځلیک==
 
-** [http://www.tolafghan.com/falsafa د فلسفې ویبلاګ]
+*[http://www.tolafghan.com/falsafa د فلسفې ویبلاګ]
 
-[[category:فلسفي وییپانګه]]
+[[وېشنيزه:فلسفي وییپانګه]]
