*Empty MediaWiki Message*

--- a/آداب_البحث.mw
+++ b/آداب_البحث.mw
@@ -3,4 +3,4 @@
 آلي: (mechanical {E}) خپلکارې، ميخانيكى
 هغه شيان چې په خپلکاري توګه كار كوي، هغه شیان چې د انګېرنې له مخې په خپلسري توګه منځته راغلي وی. لکه چې وایی په خپلسري کار کې تقریبا هېڅ فکرکول نه وي. او یا خپلکارې تفسیر هغه دی، چې یواځې به مادي او حسي ظواهرو باندې بسیا او اعتماد وکړي، 
 
-[[category:فلسفي وییپانګه]]
+[[وېشنيزه:فلسفي وییپانګه]]
