*Empty MediaWiki Message*

--- a/بوغمه.mw
+++ b/بوغمه.mw
@@ -1,4 +1,4 @@
-'''بوغمه''' په امريکايي انګريزي کې '''(Edema) ايډيما''' او په برتانيوي انګرېزي '''(Oedema) اوډېما''' چې پخوا د '''dropsy ډروپسي''' يا '''hydropsy هايډروپسي''' په نومونو هم پېژندل کېده، د بدن په بين البيني فضاګانو کې او يا هم د پوستکي تر لاندې د مايع غيرنورمالې راغونډېدنې ته وايي. په ټولګړي توګه، د بين البيني مايعاتو کچه د هوميوسټاتيک مايع برابرولو په مرسته څرګندېدلای شي، او په بين البيني فضاګانو کې د حد نه ډېر د مايعاتو ترشح او يا هم د مايعاتو د باندې وېستلو په ميکانيزم کې خنډ د بوغمې سبب ګرځي. 
+'''بوغمه''' په امريکايي انګريزي کې '''(Edema) ايډيما''' او په برتانيوي انګرېزي '''(Oedema) اوډېما''' بلل کېږي. پخوا د '''dropsy ډروپسي''' يا '''hydropsy هايډروپسي''' په نومونو هم پېژندل کېده. بوغمه د بدن په بين البيني فضاګانو کې او يا هم د پوستکي تر لاندې د مايعاتو غيرنورمالې راغونډېدنې ته وايي. په ټولګړي توګه، په نورماله توګه د بين البيني مايعاتو کچه د هوميوسټاتيک توازن له مخې  برابر ساتل کېږي، او په بين البيني فضاګانو کې د حد نه ډېر د مايعاتو ترشح او يا هم د مايعاتو د باندې وېستلو په ميکانيزم کې خنډ د بوغمې سبب ګرځي. 
 
 داسې پينځه عاملونه دي چې په بدن کې د بوغمې د جوړېدنې سبب ګرځېدلای شي. It may be facilitated by increased [[hydrostatic pressure]] or reduced [[oncotic pressure]] within blood vessels, increased blood vessel wall permeability as in [[inflammation]], obstruction of fluid clearance via the [[lymphatic system|lymphatic]] or changes in the water retaining properties of the tissues themselves. Raised hydrostatic pressure often reflects retention of water and sodium by the kidney.<ref>{{cite book | author = Kumar, Abbas, Fausto | title = Pathologic Basis of Disease, 7th edition | publisher = Elsevier Saunders | date = 1999 | location = China | pages = 122 | isbn = 0-7216-0187-1}}</ref>
 
