--- a/بوغمه.mw
+++ b/بوغمه.mw
@@ -1,6 +1,6 @@
 '''بوغمه''' په امريکايي انګريزي کې '''(Edema) ايډيما''' او په برتانيوي انګرېزي '''(Oedema) اوډېما''' بلل کېږي. پخوا د '''dropsy ډروپسي''' يا '''hydropsy هايډروپسي''' په نومونو هم پېژندل کېده. بوغمه د بدن په بين البيني فضاګانو کې او يا هم د پوستکي تر لاندې د مايعاتو غيرنورمالې راغونډېدنې ته وايي. په ټولګړي توګه، په نورماله توګه د بين البيني مايعاتو کچه د هوميوسټاتيک توازن له مخې  برابر ساتل کېږي، او په بين البيني فضاګانو کې د حد نه ډېر د مايعاتو ترشح او يا هم د مايعاتو د باندې وېستلو په ميکانيزم کې خنډ د بوغمې سبب ګرځي. 
 
-داسې پينځه عاملونه دي چې په بدن کې د بوغمې د جوړېدنې سبب ګرځېدلای شي. It may be facilitated by increased [[hydrostatic pressure]] or reduced [[oncotic pressure]] within blood vessels, increased blood vessel wall permeability as in [[inflammation]], obstruction of fluid clearance via the [[lymphatic system|lymphatic]] or changes in the water retaining properties of the tissues themselves. Raised hydrostatic pressure often reflects retention of water and sodium by the kidney.<ref>{{cite book | author = Kumar, Abbas, Fausto | title = Pathologic Basis of Disease, 7th edition | publisher = Elsevier Saunders | date = 1999 | location = China | pages = 122 | isbn = 0-7216-0187-1}}</ref>
+داسې پينځه عاملونه دي چې په بدن کې د بوغمې د جوړېدنې سبب ګرځېدلای شي. دا د [[هايډروسټېټيک فشار]] د لوړوالي او يا هم د وينې په رګونو کې د [[اونکوټيک فشار]] د راټيټېدنې په مرسته مېنځ ته راځي، د [[التهاب]] په وخت کې چې کله د وينې د رګونو شفافيت ډېرېږي نو په دې وخت کې هم بوغمه پېښېدونکې ده، او د [[ليمفاوي سيستم]] له مخې د مايعاتو د وېستلو په لار کې خنډ يا د ووبونو (انساجو) د اوبو ساتلو په ځانتياو کې بدلونونه هم بوغمه رامېنځ ته کوي. ډېر ځل د هايډروسټېټيک فشار لوړوالی، په پښتورګي کې د اوبو او د سوډيم په بېرته پاتې کېدنې غبرګون راڅرګندېږي.<ref>{{cite book | author = Kumar, Abbas, Fausto | title = Pathologic Basis of Disease, 7th edition | publisher = Elsevier Saunders | date = 1999 | location = China | pages = 122 | isbn = 0-7216-0187-1}}</ref>
 
 ==ميکانيزم==
 Generation of interstitial fluid is regulated by the forces of the [[Starling equation]].<ref>Walter F., PhD. Boron. Medical Physiology: A Cellular And Molecular Approaoch, Elsevier/Saunders. ISBN 1-4160-2328-3.</ref> Hydrostatic pressure within blood vessels tends to cause water to filter out into the tissue. This leads to a difference in protein concentration between blood plasma and tissue. As a result the [[oncotic pressure]] of the higher level of protein in the plasma tends to suck water back into the blood vessels from the tissue. It is often not appreciated that the Starling equation does not indicate a balance between these forces. The hydrostatic force must always win, and there must always be leakage of fluid out of the vessel because otherwise there can be no oncotic gradient. Starling's equation states that the rate of leakage of fluid is determined by the difference between the two forces and also by the permeability of the vessel wall to water, which determines the rate of flow for a given force imbalance. Most water leakage occurs in capillaries or post capillary [[venule]]s, which have a [[semi-permeable membrane]] wall that allows water to pass more freely than protein. (The protein is said to be reflected and the efficiency of reflection is given by a reflection constant of up to 1.) If the gaps between the cells of the vessel wall open up then permeability to water is increased first, but as the gaps increase in size permeability to protein also increases with a fall in reflection coefficient.
