--- a/بوغمه.mw
+++ b/بوغمه.mw
@@ -1,4 +1,4 @@
-'''بوغمه''' په امريکايي انګريزي کې '''(Edema) ايډيما''' او په برتانيوي انګرېزي '''(Oedema) اوډېما''' بلل کېږي. پخوا د '''dropsy ډروپسي''' يا '''hydropsy هايډروپسي''' په نومونو هم پېژندل کېده. بوغمه د بدن په بين البيني فضاګانو کې او يا هم د پوستکي تر لاندې د مايعاتو غيرنورمالې راغونډېدنې ته وايي. په ټولګړي توګه، په نورماله حالت کې د بين البيني مايعاتو کچه د هوميوسټاتيک توازن له مخې  برابر ساتل کېږي، او په بين البيني فضاګانو کې د حد نه ډېر د مايعاتو ترشح او يا هم د مايعاتو د باندې وېستلو په ميکانيزم کې خنډ د بوغمې سبب ګرځي. 
+'''بوغمه''' په امريکايي انګريزي کې '''(Edema) ايډيما''' او په برتانيوي انګرېزي '''(Oedema) اوډېما''' بلل کېږي. پخوا د '''dropsy ډروپسي''' يا '''hydropsy هايډروپسي''' په نومونو هم پېژندل کېده. بوغمه د بدن په بين البيني فضاګانو کې او يا هم د پوستکي تر لاندې د مايعاتو غيرنورمالې راغونډېدنې ته وايي. په ټولګړي توګه، په نورماله حالت کې د بين البيني مايعاتو کچه د هوميوسټاتيک توازن له مخې  برابر ساتل کېږي، نو کله چې په بين البيني فضاګانو کې د حد نه ډېر د مايعاتو ترشح وشي او يا هم د مايعاتو د باندې وېستلو په کړنه کې کوم خنډ پيدا شي بيا نو همدا د بوغمې سبب ګرځي. 
 
 داسې پينځه عاملونه دي چې په بدن کې د بوغمې د جوړېدنې سبب ګرځېدلای شي. دا د [[هايډروسټېټيک فشار]] د لوړوالي او يا هم د وينې په رګونو کې د [[اونکوټيک فشار]] د راټيټېدنې په مرسته مېنځ ته راځي، د [[التهاب]] په وخت کې چې کله د وينې د رګونو شفافيت ډېرېږي نو په دې وخت کې هم بوغمه پېښېدونکې ده، او د [[ليمفاوي سيستم]] له مخې د مايعاتو د وېستلو په لار کې خنډ يا د ووبونو (انساجو) د اوبو ساتلو په ځانتياو کې بدلونونه هم بوغمه رامېنځ ته کوي. ډېر ځل د هايډروسټېټيک فشار لوړوالی، په پښتورګي کې د اوبو او د سوډيم په بېرته پاتې کېدنې غبرګون راڅرګندېږي.<ref>{{cite book | author = Kumar, Abbas, Fausto | title = Pathologic Basis of Disease, 7th edition | publisher = Elsevier Saunders | date = 1999 | location = China | pages = 122 | isbn = 0-7216-0187-1}}</ref>
 
