--- a/وينه.mw
+++ b/وينه.mw
@@ -14,7 +14,7 @@
 * لېږدنده کړنې، چې په دې کې د موخې ځاينو ته د [[هورمونونه|هورمونون]]و لېږدېدنه او د ويجاړ شويو ووبونو سګنالونه لېږدول شامل دي.
 * د بدن د [[pH]] تنظيم
 * د بدن د تودوخې تنظيم
-* [[هايډروليک]]ي کړنې، including [[erection]] (see also [[jumping spider]])
+* [[هايډروليک]]ي کړنې، لکه [[لکوالی]] (دا هم وګورۍ [[جمپېنګ سپايډر]])
 
 Problems with blood composition or circulation can lead to downstream tissue dysfunction. The term ''ischaemia'' refers to tissue which is inadequately perfused with blood.
 
