--- a/وينه.mw
+++ b/وينه.mw
@@ -7,10 +7,10 @@
 == د وينې کړنې==
  
 * ووبونو ته د [[آکسيجن]] رسول (آکسيجن [[هېموګلوبين]] پورې ځان نښلوي او هېموګلوبين د وينې په سره توکي کې وي)
-* د مغذي موادو لکه [[ګلوکوز]]، [[امينو اسيدونه]] او [[غوړن اسيدونه]] رسول (دا توکي په وينه کې حل کېږي او يا هم ځان د پلازما پورې نښلوي)
-* د فضله موادو لکه [[کاربون ډای آکسايډ]]، [[يوريا]] او [[لاکټيک اسيد]] وېستل
-* د وينې په اميونولوژيکو کړنو کې د وينې سپين توکيو اکر شامل دی، چې اهمه کړنه يې بدن کې د باندنيو توکو پېژندنه او د انټيباډي له لارې د هغوی مخنيونه ده.
-* [[Coagulation]], which is one part of the body's self-repair mechanism
+* د غذايي موادو لکه [[ګلوکوز]]، [[امينو اسيدونه|امينو اسيدونو]] او [[غوړن اسيدونه|غوړن اسيدونو]] رسول (دا توکي په وينه کې حل کېږي او يا هم ځان د پلازما پورې نښلوي)
+* د بېکاره موادو لکه [[کاربون ډای آکسايډ]]، [[يوريا]] او [[لاکټيک اسيد]] وېستل
+* د وينې په ايميونولوژيکو کړنو کې د وينې سپين توکيو اکر شامل دی، چې اهمه کړنه يې بدن کې د باندنيو توکو پېژندنه او د انټيباډي له لارې د هغوی مخنيونه ده.
+* [[Coagulation]], وينه د بدن د ځان-رغونې د ميکانيزم يوه اهمه برخه جوړوي
 * لېږدنده کړنې، چې په دې کې د موخې ځاينو ته د [[هورمونونه|هورمونون]]و لېږدېدنه او د ويجاړ شويو ووبونو سګنالونه لېږدول شامل دي.
 * د بدن د [[pH]] تنظيم
 * د بدن د تودوخې تنظيم
