--- a/وينه.mw
+++ b/وينه.mw
@@ -7,7 +7,7 @@
 == د وينې کړنې==
  
 * ووبونو ته د [[آکسيجن]] رسول (آکسيجن [[هېموګلوبين]] پورې ځان نښلوي او هېموګلوبين د وينې په سره توکي کې وي)
-* د غذايي موادو لکه [[ګلوکوز]]، [[امينو اسيدونه|امينو اسيدونو]] او [[غوړن اسيدونه|غوړن اسيدونو]] رسول (دا توکي په وينه کې حل کېږي او يا هم ځان د پلازما پورې نښلوي)
+* د غذايي موادو لکه [[ګلوکوز]]، [[امينو اسيد|امينو اسيدونو]] او [[غوړن اسيدونه|غوړن اسيدونو]] رسول (دا توکي په وينه کې حل کېږي او يا هم ځان د پلازما پورې نښلوي)
 * د بېکاره موادو لکه [[کاربون ډای آکسايډ]]، [[يوريا]] او [[لاکټيک اسيد]] وېستل
 * د وينې په ايميونولوژيکو کړنو کې د وينې سپين توکيو اکر شامل دی، چې اهمه کړنه يې بدن کې د باندنيو توکو پېژندنه او د انټيباډي له لارې د هغوی مخنيونه ده.
 * [[Coagulation]], وينه د بدن د ځان-رغونې د ميکانيزم يوه اهمه برخه جوړوي
